[tool.poetry]
name = "classificator of smoking status in lung cancer rna-seq data"
version = "0.1.0"
description = ""
authors = ["Michil Trofimov"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "3.7"
pandas = "2.1"
lightgbm = "^4.3.0"
seaborn = "^0.13.2"
numpy = "^1.26.4"
shap = "^0.45.1"
decoupler = "^1.6.0"
imblearn = "^0.0"
scikit-learn = "^1.5.0"
optuna = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
